# buffrs

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  buf.yaml  deny.toml  downloadBuffrsDependencies.nix  flake.nix  pre-commit
.cargo/: config.toml
.github/: pre-commit
.github/workflows/: bin.yaml  book.yaml  book.yml  ci.yaml  ci.yml  cli.yml  nix.yaml  nix.yml  nix_ci.yml  nix_ci_mac.yml  nix_ci_ubuntu.yml  registry.yml  release.yaml  release.yml
.nix/: buffrs.nix  libgit2.nix  toolchain.nix
crates/buffrs/: Cargo.toml
crates/buffrs-core/: Cargo.toml
crates/buffrs-core/src/lock/: digest.rs
crates/buffrs-core/src/package/: store.rs  type.rs
crates/buffrs-core/src/registry/: mod.rs
crates/buffrs-core/src/validation/: mod.rs  violation.rs
crates/buffrs-core/src/validation/rules/: ident_casing.rs
crates/buffrs-core/tests/data/parsing/: books.json
crates/buffrs/src/: lib.rs  main.rs  validation.rs
crates/buffrs/src/lock/: digest.rs
crates/buffrs/src/validation/data/: message.rs
crates/buffrs/tests/: lib.rs  test_registry.rs
crates/buffrs/tests/cmd/: mod.rs
crates/buffrs/tests/cmd/add/: mod.rs
crates/buffrs/tests/cmd/init/: mod.rs
crates/buffrs/tests/cmd/init/api/: mod.rs
crates/buffrs/tests/cmd/init/lib/: mod.rs
crates/buffrs/tests/cmd/lint/: mod.rs
crates/buffrs/tests/cmd/lint/in/: Proto.toml
crates/buffrs/tests/cmd/lint/in/proto/runtime/: jobs.proto  type_two_runtime.proto
crates/buffrs/tests/cmd/lint/in/proto/types/sub/: type_one.proto
crates/buffrs/tests/cmd/logout/: mod.rs
crates/buffrs/tests/cmd/ls/in/: Proto.toml
crates/buffrs/tests/cmd/remove/: mod.rs
crates/buffrs/tests/cmd/remove/in/: Proto.toml
crates/buffrs/tests/cmd/tuto/: mod.rs
crates/buffrs/tests/cmd/tuto/in/: Cargo.toml  build.rs  main.rs  sensor.proto
crates/buffrs/tests/data/projects/api/: Proto.toml
crates/buffrs/tests/data/projects/lib/: Proto.toml
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  index.md
docs/src/commands/: buffrs-add.md  buffrs-clean.md  buffrs-doc.md  buffrs-generate-lockfile.md  buffrs-generate.md  buffrs-help.md  buffrs-init.md  buffrs-install.md  buffrs-lint.md  buffrs-list.md  buffrs-lock-print-files.md  buffrs-lock.md  buffrs-login.md  buffrs-logout.md  buffrs-ls.md  buffrs-new.md  buffrs-package.md  buffrs-publish.md  buffrs-remove.md  buffrs-tree.md  buffrs-uninstall.md  buffrs-update.md  buffrs-version.md  buffrs-yank.md  buffrs.md  build-commands.md  general-commands.md  index.md  manifest-commands.md  package-commands.md  publishing-commands.md
docs/src/getting-started/: first-steps.md  index.md  installation.md
docs/src/guide/: buffrs-home.md  consuming-packages.md  continuous-integration.md  creating-a-new-package.md  creating-a-package.md  dependencies.md  import-system.md  index.md  local-dependencies.md  manifest-vs-lockfile.md  package-types.md  project-layout.md  project-types.md  proto-toml-vs-proto-lock.md  the-framework.md  using-packages.md  why-buffrs-exists.md  workspaces.md
docs/src/integration/: cargo.md
docs/src/integrations/: cargo.md  index.md
docs/src/migration/: architectures.md  index.md
integrations/npm/: package.json
migrations/: 20230828111733_users.up.sql  20230828111844_packages.up.sql  20230828111923_versions.down.sql
nix/: buffrs.nix  cache-pure.nix  cache.nix  downloadBuffrsDependencies.nix  libgit2.nix
pkgs/npm/: README.md  download.js  package-lock.json  package.json
registry/: .env  .gitignore  Cargo.toml  Dockerfile  Proto.toml  README.md  build.rs  deny.toml  docker-compose.yml
registry/migrations/: 20230828111733_users.down.sql  20230828111733_users.up.sql  20230828111844_packages.down.sql  20230828111844_packages.up.sql  20230828111923_versions.down.sql  20230828111923_versions.up.sql  up.sh
registry/proto/: dependency.proto  manifest.proto  package.proto  registry.proto  resolver.proto  version.proto
registry/src/: api.rs  config.rs  context.rs  db.rs  lib.rs  main.rs  metadata.rs  options.rs  proto.rs  storage.rs  types.rs
registry/src/api/: grpc.rs
registry/src/db/: entities.rs  postgres.rs  tests.rs
registry/src/metadata/: entities.rs  memory.rs  postgres.rs  postgresql.rs  tests.rs
registry/src/model/: mod.rs
registry/src/storage/: cache.rs  filesystem.rs  mod.rs  s3.rs  tests.rs
registry/tests/api/: main.rs
registry/tests/proptest-regressions/: main.txt
registry/tests/storage/: filesystem.rs  main.rs  mod.rs  s3.rs
registry/ui/: next.config.mjs  package-lock.json  package.json  prettier.config.js  tailwind.config.ts  typography.ts
registry/ui/app/: layout.tsx  not-found.tsx  page.mdx  page.tsx
registry/ui/app/categories/: page.tsx
registry/ui/app/categories/[category]/: page.tsx
registry/ui/components/: Button.tsx  Categories.tsx  Code.tsx  Footer.tsx  Header.tsx  Heading.tsx  Layout.tsx  Logo.tsx  Packages.tsx  Search.tsx  Statistics.tsx  Tag.tsx  ThemeToggle.tsx  mdx.tsx
registry/ui/components/hero/: Hero.tsx  HeroPattern.tsx
registry/ui/lib/: remToPx.ts
registry/ui/styles/: tailwind.css
src/: buf_yaml.rs  cache.rs  cli.rs  command.rs  config.rs  context.rs  credentials.rs  errors.rs  generation.rs  generator.rs  io.rs  lib.rs  lock.rs  logs.rs  main.rs  managed_file.rs  manifest.rs  manifest_v2.rs  package.rs  proto_rs.rs  resolver.rs  resolver_v2.rs  sanity_check.rs  validation.rs  workspace.rs
src/integration/: buf_yaml.rs  mod.rs  path_util.rs  proto_rs.rs
src/lock/: digest.rs
src/manifest/: mod.rs  package.rs  raw.rs  workspace.rs
src/operations/: install.rs  installer.rs  mod.rs  publish.rs  publisher.rs
src/package/: compressed.rs  directory.rs  mod.rs  name.rs  store.rs  type.rs
src/registry/: artifactory.rs  cache.rs  http.rs  local.rs  maven.rs  mod.rs
src/validation/: data.rs  diff.rs  parse.rs  rules.rs  serde.rs  tests.rs  violation.rs
tests/: lib.rs  registry.rs  resolver_tests.rs  resolver_v2_tests.rs  test_registry.rs  validation.rs
tests/cmd/: mod.rs
tests/compat/: mod.rs
tests/helper/: mod.rs
tests/nix/: mod.rs
tests/resolver/: mod.rs
(+172 files in other folders)
