[workspace.package]
authors = [
  # In alphabetical order
  "Alexis Bourget <alexis.bourget@helsing.ai>",
  "André Sá De Mello <andre.mello@helsing.ai>",
  "James Baker <james.baker@helsing.ai>",
  "Mara Schulke <mara.schulke@helsing.ai>",
  "Patrick Elsen <patrick.elsen@helsing.ai>",
  "Quentin Santos <quentin.santos@helsing.ai>",
  "Robert Fink <robert.fink@helsing.ai>",
  "Thomas Pellissier-Tanon <thomas.pellissier-tanon@helsing.ai>",
  "Tom Karwowski <tom.karwowski@helsing.ai>",
]
description = "Modern protobuf package management"
edition = "2021"
# Relative to package roots:
# <https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table>
exclude = ["../../.github", "../../tests"]
keywords = ["protobuf", "protocol", "buffers", "package", "distribution"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/helsing-ai/buffrs"
version = "0.8.0"

[workspace]
resolver = "2"
members = [
  "crates/buffrs",
]

[workspace.dependencies]
# Our own
buffrs = { version = "0.8.0", path = "crates/buffrs/" }

# Main deps
anyhow = "1.0"
async-recursion = "1.0.5"
bytes = "1.5.0"
clap = { version = "4.4", features = ["cargo", "derive"] }
diff-struct = "0.5.3"
flate2 = "1"
hex = "0.4.3"
home = "0.5.5"
human-panic = "1"
miette = { version = "5.10.0", features = ["fancy"] }
protobuf = "3.3.0"
protobuf-parse = "3.3.0"
reqwest = { version = "0.11", features = ["rustls-tls-native-roots"], default-features = false }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
tar = "0.4"
thiserror = "1.0.56"
tokio = { version = "1.26", features = ["fs", "rt", "macros", "process", "io-std", "tracing"] }
toml = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.4", features = ["serde"] }
walkdir = "2"

# Dev deps
assert_cmd = "2.0"
assert_fs = "1.0"
axum = { version = "0.7.2", default-features = false, features = ["tokio", "http1"] }
fs_extra = "1.3"
paste = "1.0.14"
predicates = "3.0"
pretty_assertions = "1.4"
serde_test = "1.0.176"
similar-asserts = "1.5.0"

[profile.deb]
inherits = "release"
debug = false
