[package]
name = "buffrs"
version = "0.10.0"
edition = "2021"
description = "Modern protobuf package management"
authors = [
  "André Sá De Mello <andre.mello@helsing.ai>",
  "James Baker <james.baker@helsing.ai>",
  "Mara Schulke <mara.schulke@helsing.ai>",
  "Patrick Elsen <patrick.elsen@helsing.ai>",
  "Quentin Santos <quentin.santos@helsing.ai>",
  "Robert Fink <robert.fink@helsing.ai>",
  "Thomas Pellissier-Tanon <thomas.pellissier-tanon@helsing.ai>",
  "Tom Karwowski <tom.karwowski@helsing.ai>",
  "Daniel Gehriger <dgehriger@globusmedical.com>"
]
repository = "https://github.com/helsing-ai/buffrs"
documentation = "https://docs.rs/buffrs"
keywords = ["protobuf", "protocol", "buffers", "package", "distribution"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
exclude = ["/.github", "/tests"]

[[bin]]
name = "buffrs"
path = "src/main.rs"
required-features = ["git", "validation"]

[[test]]
name = "e2e"
path = "tests/lib.rs"
test = true

[features]
default = ["git", "validation"]
validation = ["dep:anyhow", "dep:protobuf", "dep:protobuf-parse", "dep:diff-struct"]
git = []

[dependencies]
async-recursion = "1.0.5"
anyhow = { version = "1.0", optional = true }
bytes = "1.0"
clap = { version = "4.3", features = ["cargo", "derive"] }
diff-struct = { version = "0.5.3", optional = true }
flate2 = "1"
hex = "0.4.3"
home = "0.5.5"
human-panic = "2"
miette = { version = "7", features = ["fancy"] }
pretty_yaml = { version = "0.5.0" }
protobuf = { version = "3.3.0", optional = true }
protobuf-parse = { version = "3.3.0", optional = true }
reqwest = { version = "0.11", features = ["rustls-tls-native-roots"], default-features = false }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = { version = "0.0.12" }
tar = "0.4"
thiserror = "1.0.49"
tokio = { version = "^1.26", features = ["fs", "rt", "macros", "process", "io-std", "tracing"] }
toml = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.4", features = ["serde"] }
walkdir = "2"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
axum = { version = "0.7.2", default-features = false, features = ["tokio", "http1"] }
fs_extra = "1.3"
gix = { version = "0.68.0", default-features = false }
hex = "0.4.3"
paste = "1.0.14"
predicates = "3.0"
pretty_assertions = "1.4"
serde_json = { version = "1.0.107" }
serde_test = "1.0.176"
similar-asserts = "1.5.0"
tokio = { version = "^1.26", features = ["rt-multi-thread"] }

[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/buffrs", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/buffrs/", "644"],
  ["README.md", "usr/share/doc/buffrs/README", "644"],
]
