[package]
name = "buffrs"
version = "0.12.0"
edition = "2024"
description = "Modern protobuf package management"
authors = [
    "André Sá De Mello <andre.mello@helsing.ai>",
    "James Baker <james.baker@helsing.ai>",
    "Mara Schulke <mara.schulke@helsing.ai>",
    "Markus Ziller <markus.ziller@helsing.ai>",
    "Patrick Elsen <patrick.elsen@helsing.ai>",
    "Quentin Santos <quentin.santos@helsing.ai>",
    "Robert Fink <robert.fink@helsing.ai>",
    "Thomas Pellissier-Tanon <thomas.pellissier-tanon@helsing.ai>",
    "Tom Karwowski <tom.karwowski@helsing.ai>",
]
repository = "https://github.com/helsing-ai/buffrs"
documentation = "https://docs.rs/buffrs"
keywords = ["protobuf", "protocol", "buffers", "package", "distribution"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
exclude = ["/.github", "/tests"]

[[bin]]
name = "buffrs"
path = "src/main.rs"
required-features = ["git", "validation"]

[[test]]
name = "e2e"
path = "tests/lib.rs"
test = true

[features]
default = ["git", "validation"]
validation = [
    "dep:anyhow",
    "dep:protobuf",
    "dep:protobuf-parse",
    "dep:diff-struct",
]
git = []

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.89"
anyhow = { version = "1.0", optional = true }
bytes = "1.0"
clap = { version = "4.3", features = ["cargo", "derive"] }
diff-struct = { version = "0.5.3", optional = true }
flate2 = "1"
glob = "0.3"
hex = "0.4.3"
home = "0.5.5"
human-panic = "2"
miette = { version = "7", features = ["fancy"] }
protobuf = { version = "3.7.2", optional = true }
protobuf-parse = { version = "3.7.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
tokio = { version = "^1.26", features = [
    "fs",
    "rt",
    "macros",
    "process",
    "io-std",
    "tracing",
] }
toml = "0.9.7"
tracing = "0.1"
tracing-subscriber = ">=0.3.20"
url = { version = "2.4", features = ["serde"] }
walkdir = "2"
sha2 = "0.10.8"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "http1",
] }
fs_extra = "1.3"
gix = { version = "0.74.1", default-features = false }
hex = "0.4.3"
pretty_assertions = "1.4"
serde_json = "1.0.107"
serde_test = "1.0.176"
similar-asserts = "1.5.0"
tempfile = "3.8"
tokio = { version = "^1.26", features = ["rt-multi-thread"] }

[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
section = "utils"
assets = [
    [
        "target/release/buffrs",
        "usr/bin/",
        "755",
    ],
    [
        "LICENSE",
        "usr/share/doc/buffrs/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/buffrs/README",
        "644",
    ],
]
