[package]
name = "buffrs-registry"
version = "0.1.0"
edition = "2021"
description = "Registry for buffrs, a modern protocol buffer package manager"
license = "Apache-2.0"
default-run = "buffrs-registry"

[dependencies]
async-trait = "0.1.74"
aws-config = { version = "1.0.1", optional = true }
aws-sdk-s3 = { version = "1.4.0", optional = true }
buffrs = { path = "../", version = "0.7.1" }
bytes = "1.5.0"
prost = "0.12.1"
tonic = "0.10.2"
tonic-types = "0.10.2"
clap = { version = "4.3", features = ["cargo", "derive", "env"] }
eyre = "0.6.8"
semver = "1.0.20"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"

[build-dependencies]
buffrs = { path = "../", version = "0.7.1" }

[features]
default = []
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dev-dependencies]
aws-credential-types = { version = "1.0.1", features = ["hardcoded-credentials"] }
proptest = "1.3.1"
rand = "0.8.5"
tempfile = "3.8.1"
test-strategy = "0.3.1"
