[package]
name = "buffrs-registry"
version = "0.1.0"
edition = "2021"
description = "Registry for buffrs, a modern protocol buffer package manager"
license = "Apache-2.0"
default-run = "buffrs-registry"

[dependencies]
async-trait = "0.1.77"
atmosphere = { version = "0.1.3", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "chrono", "postgres", "migrate"] }
aws-config = { version = "1.1.2", optional = true }
aws-sdk-s3 = { version = "1.12.0", optional = true }
buffrs = { path = "../", version = "0.7.5" }
bytes = "1.5.0"
prost = "0.12.3"
tonic = "0.10"
tonic-types = "0.10"
clap = { version = "4.4", features = ["cargo", "derive", "env"] }
eyre = "0.6.11"
semver = "1.0.21"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
url = "2.5.0"
tracing-subscriber = "0.3.18"
tower = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0"
sha3 = "0.10.8"

[build-dependencies]
buffrs = { path = "../", version = "0.7.1" }

[features]
default = []
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dev-dependencies]
aws-credential-types = { version = "1.1.2", features = ["hardcoded-credentials"] }
proptest = "1.4.0"
rand = "0.8.5"
tempfile = "3.9.0"
test-strategy = "0.3.1"
