[package]
name = "buffrs"
documentation = "https://docs.rs/buffrs"
categories = ["command-line-utilities"]

authors.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[test]]
name = "e2e"
path = "tests/lib.rs"
test = true

[dependencies]
buffrs-core = { workspace = true, features = ["git", "validation"] }

clap.workspace = true
human-panic.workspace = true
miette.workspace = true
semver.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
axum.workspace = true
bytes.workspace = true
fs_extra.workspace = true
pretty_assertions.workspace = true
reqwest.workspace = true
tracing.workspace = true

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/buffrs", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/buffrs/", "644"],
  ["README.md", "usr/share/doc/buffrs/README", "644"],
]
